--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   }
   
   .light {
+    --clr-filter: #444;
     --clr-bg: #fcfcfc;
     --clr-bg-alt: #fff;
     --clr-fg: #555;
@@ -15,6 +16,7 @@
   }
   
   .dark {
+    --clr-filter: #fcfcfc;
     --clr-bg: #23283e;
     --clr-bg-alt: #2a2f4c;
     --clr-fg: #bdbddd;
