--- a/src/Containers/Portfolio/Portfolio.css
+++ b/src/Containers/Portfolio/Portfolio.css
@@ -1,7 +1,42 @@
-.active_prot_menu a, .portfolio_menu ul li a:hover {
-    background: #363940 !important;
-    color: #fff !important;
+.projects__grid {
+    max-width: 1020px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(18em,1fr));
+    grid-gap: 2em;
 }
+
+.project {
+    padding: 2em;
+    margin: 0 auto;
+    text-align: center;
+    box-shadow: var(--shadow);
+    transition: -webkit-transform .2s linear;
+    transition: transform .2s linear;
+    transition: transform .2s linear,-webkit-transform .2s linear;
+}
+
+
+ .portfolio_menu ul li a:hover {
+    background: var(--clr-filter);
+    color: var(--clr-fg) !important;
+}
+
+.active_prot_menu a {
+    background: var(--clr-filter);
+    color: var(--clr-fg) !important;
+}
+
+.portfolio_menu ul li a {
+    color: var(--clr-fg);
+    background: transparent;
+    display: inline-block;
+    margin: 4px;
+    padding: 8px 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 
 .portfolio_content {
     margin-top: 36px;
@@ -49,26 +84,26 @@
 }
 
 .card {
-    margin: 30px auto;
-    width: 200px;
-    height: 200px;
-    border-radius: 40px;
+    margin: 15px auto;
+    width: 350px;
+    height: 350px;
+    border-radius: 10px;
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     cursor: pointer;
     transition: 0.4s;
-    background: #2a0000
+    background: #000000
 }
 
 .card .card_image {
     width: inherit;
     height: inherit;
-    border-radius: 40px;
+    border-radius:10px;
 }
 
 .card .card_image img {
     width: inherit;
     height: inherit;
-    border-radius: 40px;
+    border-radius: 10px;
     object-fit: cover;
 }
 
@@ -82,14 +117,37 @@
     height: 40px;
 }
 
-.card:hover {
-    transform: scale(0.9, 0.9);
-    box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
-    transition: .5s ease;
+
+.card:hover div{
+	transform:scale(1);
+	opacity:1;
 }
 
-.card .card_image img:hover {
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+  }
+  
+  .card:hover .overlay {
     opacity: 0.5;
+  }
+  
+
+.card .card_image img:hover {
+    -o-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity:0.6;
 }
 
 .title-white {
@@ -116,15 +174,7 @@
     display: inline-block;
 }
 
-.portfolio_menu ul li a {
-    color: #363940;
-    background: transparent;
-    display: inline-block;
-    margin: 4px;
-    padding: 8px 10px;
-    text-decoration: none;
-    text-transform: uppercase;
-}
+
 
 @media all and (max-width: 500px) {
     .card-list {
