--- a/src/Containers/Portfolio/onePortfolio.css
+++ b/src/Containers/Portfolio/onePortfolio.css
@@ -3,7 +3,6 @@
     width: 95%;
     margin: 0 auto;
     text-align: justify;
-    
 }
 
 .content {
@@ -17,6 +16,14 @@ img {
     width: 100%;
 }
 
+.imge {
+/*     max-width: 800px;
+    min-width: 50px;
+    height: auto;
+    width: 100%;
+    margin-bottom: 50px; */
+    color: var(--clr-fg-alt);
+}
 
 .porflio-content {
     max-width: 800px;
@@ -26,22 +33,22 @@ img {
 }
 
 .centere {
-text-align: center;
+    text-align: center;
 }
 
-.margine{
+.margine {
     margin: 50px auto;
 }
 
-.margine-subtitle{
+.margine-subtitle {
     margin: 20px auto;
 }
-
 
 h2 {
     font-size: 50px;
 }
-p{
+
+p {
     text-align: justify;
     margin: 50px auto;
 }
