--- a/src/Containers/Portfolio/onePortfolio.css
+++ b/src/Containers/Portfolio/onePortfolio.css
@@ -10,14 +10,16 @@
 }
 
 img {
-    max-width: 800px;
+    /*     max-width: 800px;
     min-width: 300px;
     height: 450px;
+    width: 100%; */
+    height: auto;
     width: 100%;
 }
 
 .imge {
-/*     max-width: 800px;
+    /*     max-width: 800px;
     min-width: 50px;
     height: auto;
     width: 100%;
